# public-ip

./: README.md  pyproject.toml
public_ip/: __init__.py  dns_servers.py  resolver.py
tests/: test_public_ip.py
